Prevent header avi from causing reflow
The alt text for the avi was flashing on every page load as the image
was downloaded/painted in, which caused horrid reflows and flashing of
broken layouts.

--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -22,6 +22,7 @@
 .brand img {
   margin-right: 0.5rem;
   border-radius: 100%;
+  font-size: 1px; /* Fix repaint issue where image alt fucks up layout before img is loaded */
 }
 
 .nav a {
